# BlockInfer

./: .gitignore  BLOCK_DECODE_COMPLETE.md  CHANGES_REVIEW.md  CONTRIBUTING.md  LICENSE  README.md  SDAR_benchmark.py  analyze_results.py  benchmark_final_results.json  benchmark_llada.py  benchmark_results.json  dataset.py  download_sdar.py  dreams_benchmark.py  example.py  example_llada_blockinfer.py  generated_tokens.txt  llada_vanilla.py  pyproject.toml  run_benchmark.slurm  run_one_by_one.sh  run_one_by_one.slurm  sample_200.jsonl  test_env.py  test_llada.py  test_sdar.sh  utils.py
BlockInfer/: __init__.py  llm.py
benchmark_samples/: benchmark_sample_0.json  benchmark_sample_1.json  benchmark_sample_10.json  benchmark_sample_100.json  benchmark_sample_101.json  benchmark_sample_102.json  benchmark_sample_103.json  benchmark_sample_104.json  benchmark_sample_105.json  benchmark_sample_106.json  benchmark_sample_107.json  benchmark_sample_108.json  benchmark_sample_109.json  benchmark_sample_11.json  benchmark_sample_110.json  benchmark_sample_111.json  benchmark_sample_112.json  benchmark_sample_113.json  benchmark_sample_114.json  benchmark_sample_115.json  benchmark_sample_116.json  benchmark_sample_117.json  benchmark_sample_118.json  benchmark_sample_119.json  benchmark_sample_12.json  benchmark_sample_120.json  benchmark_sample_121.json  benchmark_sample_122.json  benchmark_sample_123.json  benchmark_sample_124.json  benchmark_sample_125.json  benchmark_sample_126.json  benchmark_sample_127.json  benchmark_sample_128.json  benchmark_sample_129.json  (+165 more)
(+242 files in other folders)
