[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "blockinfer"
version = "0.2.0"
authors = [{ name = "Hui Shen" }]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
description = "a lightweight inference engine for block diffusion models (SDAR and LLaDA)"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.4.0",
    "triton>=3.0.0",
    "transformers>=4.51.0",
    "liger-kernel",
    "flashinfer-python",
    "xxhash",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["blockinfer*"]

